--- a/index.css
+++ b/index.css
@@ -121,12 +121,19 @@ a
 
 .adv-links > .navigation-list
 {
-    width: 60%;
+    justify-content: flex-start;
+    width: 100%;
 }
 
 .adv-links li
 {
-    padding: 3px 0;
+    flex: none;
+    padding: 3px 15px;
+}
+
+.adv-links li:nth-child(2n+1)
+{
+    background: #23ace3;
 }
 
 .adv-links a:hover
@@ -419,7 +426,8 @@ main
     margin: 0;
     padding: 0 5px;
     border-right: 1px solid #999;
-    font-size: 1em;
+    font-size: .8em;
+    text-transform: uppercase;
 }
 
 .news img
@@ -440,11 +448,20 @@ main
     clear: both;
 }
 
-.news p
+.news article p
 {
     width: 100%;
     margin: 0;
     padding: 0;
+
+    font-size: .85em;
+}
+
+.news article a
+{
+    font-weight: bold;
+    font-size: .9em;
+    color: #000;
 }
 
 .center
